<resources>
    <string name="app_name">Hours Report App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Hila Hagit</string>
    <string name="current_time">Current date and time:</string>
    <string name="menu_home">Home</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_summary">Summary</string>
    <string name="back_button">Back</string>
    <string name="OK_button">Report</string>
    <string name="thank_you">Thank you</string>
    <string name="finish">Finished</string>
    <string name="SignOut">Sign out</string>
    <string name="Login">Login</string>
    <string name="Dont_have_an_account">Dont have an account?</string>
    <string name="Register">Register</string>
    <string name="new_account">New account</string>
    <string name="work_day">Work day</string>
    <string name="sick_day">Sick day</string>
    <string name="free_day">Free day</string>
    <string name="time_report">Time report:</string>
    <string name="total">Total hours:</string>


    <string-array name="Repotrs_type">
        <item>Work</item>
        <item>Free</item>
        <item>Sick</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>