<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.reports.DatePickerFragment"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <CalendarView
        android:id="@+id/simpleCalendarView"
        android:layout_width="match_parent"
        android:layout_height="290dp" />

    <TextView
        android:id="@+id/date_picker_kindOfWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_day"
        android:textSize="20dp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".ui.reports.DatePickerFragment">

        <TextView
            android:id="@+id/date_picker_timeReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/time_report"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_picker_editTimeReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="15dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".ui.reports.DatePickerFragment">
        <TextView
            android:id="@+id/date_pickerd_totalHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="15dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/date_picker_editTotalHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="9H"
            android:textColor="@color/black"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        tools:context=".ui.reports.DatePickerFragment">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            >
            <Button
                android:id="@+id/enterLoc"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="Enter Location"
                android:textAllCaps="false"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            >
            <Button
                android:id="@+id/exitLoc"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="Exit Location"
                android:textAllCaps="false"

                />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>