<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@color/hamburgerMenuColor"

    >

    <TextView
        android:id="@+id/Register_TXT_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        app:srcCompat="@drawable/register"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="6dp"
        />
    <TextView
        android:id="@+id/Register_TXT_registerHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30dp"
        android:textColor="@color/purple_200"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <EditText
        android:id="@+id/Register_TXT_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="Name"
        android:inputType="textPersonName"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <EditText
        android:id="@+id/Register_TXT_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="Email"
        android:inputType="textPersonName"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"

        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >
        <EditText
            android:id="@+id/Register_TXT_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="Password"
            android:inputType="textPersonName"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:password="true"
            android:background="@android:color/transparent"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/Register_BTN_register"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        app:strokeColor="@color/red"
        app:strokeWidth="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="10dp"
        android:layout_margin="30dp"
        android:textColor="@color/black"
        android:layout_gravity="center"

        />
    <TextView
        android:id="@+id/Register_TXT_already_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Register_BTN_alreadyHaveAcc"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        app:strokeColor="@color/green"
        app:strokeWidth="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="10dp"
        android:textColor="@color/black"
        android:layout_gravity="center"

/>
</LinearLayout>